[package]
name = "winsplit"
description = "Library to split string into command line arguments"
categories = []
keywords = ["split", "windows", "shell", "quote", "words"]
version = "0.1.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2021"
homepage = "https://github.com/chipsenkbeil/winsplit"
repository = "https://github.com/chipsenkbeil/winsplit"
readme = "README.md"
license = "MIT OR Apache-2.0"

[features]
default = ["std"]
std = []
