[package]
name = "winsplit"
description = "Library to split string into command line arguments mirroring CommandLineToArgV with VC++ 2008 parsing rules"
categories = ["command-line-interface"]
keywords = ["split", "windows", "shell", "quote", "words"]
version = "0.2.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2021"
homepage = "https://github.com/chipsenkbeil/winsplit-rs"
repository = "https://github.com/chipsenkbeil/winsplit-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"

[features]
default = ["std"]
std = []

[dev-dependencies]
doc-comment = "0.3.3"
